logs/Slang/generated/yosys/asicworld_code_hdl_models_mux_2to1_gates.sv.log
name: asicworld_code_hdl_models_mux_2to1_gates
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_mux_2to1_gates.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_mux_2to1_gates.v:13:1: error: expected member
not U_inv (inv_sel,sel);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_mux_2to1_gates.v:14:1: error: expected member
and U_anda (asel,a,inv_sel),
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_mux_2to1_gates.v:16:1: error: expected member
or U_or (y,asel,bsel);
^~
